@@ -58,7 +58,7 @@ FIELD		|host		|t_varchar(128)	|''	|NOT NULL	|ZBX_PROXY
 FIELD		|status		|t_integer	|'0'	|NOT NULL	|ZBX_PROXY
 FIELD		|disable_until	|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
 FIELD		|error		|t_varchar(2048)|''	|NOT NULL	|ZBX_NODATA
-FIELD		|available	|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
+FIELD		|available	|t_integer	|'0'	|NOT NULL	|ZBX_PROXY
 FIELD		|errors_from	|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
 FIELD		|lastaccess	|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
 FIELD		|ipmi_authtype	|t_integer	|'-1'	|NOT NULL	|ZBX_PROXY
@@ -66,9 +66,9 @@ FIELD		|ipmi_privilege	|t_integer	|'2'	|NOT NULL	|ZBX_PROXY
 FIELD		|ipmi_username	|t_varchar(16)	|''	|NOT NULL	|ZBX_PROXY
 FIELD		|ipmi_password	|t_varchar(20)	|''	|NOT NULL	|ZBX_PROXY
 FIELD		|ipmi_disable_until|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
-FIELD		|ipmi_available	|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
+FIELD		|ipmi_available	|t_integer	|'0'	|NOT NULL	|ZBX_PROXY
 FIELD		|snmp_disable_until|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
-FIELD		|snmp_available	|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
+FIELD		|snmp_available	|t_integer	|'0'	|NOT NULL	|ZBX_PROXY
 FIELD		|maintenanceid	|t_id		|	|NULL		|ZBX_NODATA		|2|maintenances	|		|RESTRICT
 FIELD		|maintenance_status|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
 FIELD		|maintenance_type|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
@@ -78,7 +78,7 @@ FIELD		|snmp_errors_from|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
 FIELD		|ipmi_error	|t_varchar(2048)|''	|NOT NULL	|ZBX_NODATA
 FIELD		|snmp_error	|t_varchar(2048)|''	|NOT NULL	|ZBX_NODATA
 FIELD		|jmx_disable_until|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
-FIELD		|jmx_available	|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
+FIELD		|jmx_available	|t_integer	|'0'	|NOT NULL	|ZBX_PROXY
 FIELD		|jmx_errors_from|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
 FIELD		|jmx_error	|t_varchar(2048)|''	|NOT NULL	|ZBX_NODATA
 FIELD		|name		|t_varchar(128)	|''	|NOT NULL	|ZBX_PROXY
